[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "remember-the-milk-exporter"
version = "1.0.0"
description = "Exports tags and lists from Remember The Milk API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.13"
dependencies = [
    "rtmilk @ git+https://github.com/rkhwaja/rtmilk.git",
    "pydantic>=2.0.0",
    "requests>=2.0.0",
    "aiohttp>=3.8.0",
    "listdiff>=0.1.0",
]

[project.scripts]
rtm-exporter = "main:main"

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pytest>=8.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["main.py"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["rtmilk.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests",
]
